--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-body {
-    font-size: 16px;
-    font-style: normal;
-    font-family: "Inconsolata-Light", monospace;
-    font-weight: bolder;
-    line-height: 1;
-}
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,500;0,600;1,300&display=swap');
 
+body {
+    font-family: 'Source Code Pro', monospace;
+}
