--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,500;0,600;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,600;1,300&display=swap');
 
 body {
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'Source Code Pro', monospace;    
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;  
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
 }
