--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,22 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 10px;
+    padding-top: 2px;
+}
+
+nav li {
+    display: inline;
+    margin-right: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #0f1faf;
+}
+
